# lucretia

./: .gitignore  Makefile  README.md  lucretia.cabal
interpreter/: Debug.hs  DebugUtils.hs  Diff.hs  Diff_Test.hs  HUnitUtils.hs  LocalState.hs  Main.hs  Makefile  MapLenses.hs  MiscExamples.hs  MonadUtils.hs  OrFail.hs  PrettyDecodablePrint.hs  PrettyPrintUtils.hs  PythonTypeChecker.hs  README.html  README.md  Test.hs  TestByOutput.hs  TestByOutput.sh  TypingExamples.hs  lucre.cabal  lucre.hs  test9.luc
interpreter/Lucretia/: ApplicativeParser.hs  Definitions.hs  Exception.hs  Interpreter.hs  ParsecParser.hs  ParserAndPrettyPrinterTest.hs  PrettyPrint.hs  Syntax.hs  Test.hs  TestExps.hs  Test_RecursiveFunctions.hs  Types.hs
interpreter/Lucretia/TypeChecker/: Definitions.hs  IsomorphicModuloNames.hs  Main.hs  MonomorphicModuloNames.hs  Syntax.hs  Test.hs  TypeChecker.hs  Types.hs
interpreter/PythonToLucretia/: Converter.hs  PythonToLucretia.hs  Test_CompareLuAndPyASTs.hs  Test_CompareLuAndPyASTs.sh  test.py
interpreter/PythonToLucretia/tests/: arithmetic_01.py  print_01.py  records_02.py
interpreter/TestByLuOutput/: print.lu.wrong.out
interpreter/Utils/: Test.hs  VariableName.hs
interpreter/docs/: weakening_in_fdecl_rule.hs
src/: PythonToLucretia.hs  lucre_interpreter.hs  python_typechecker.hs
src/Lucretia/: Interpreter.hs  PrettyPrint.hs  TypeChecker.hs
src/Lucretia/Interpreter/: Exception.hs
src/Lucretia/Language/: Definitions.hs  Syntax.hs  Types.hs
src/Lucretia/Parser/: ApplicativeParser.hs  ParsecParser.hs
src/Lucretia/TypeChecker/: Monad.hs  MonomorphicModuloNames.hs  Renaming.hs  Rules.hs  Update.hs  Weakening.hs
src/Util/: Debug.hs  Diff.hs  HUnit.hs  Map.hs  MapLenses.hs  Monad.hs  OrFail.hs  PrettyPrint.hs  VariableName.hs
test/: PythonToLucretiaTest.hs  test.hs
test/LucretiaTest/: InterpreterTest.hs  ParserAndPrettyPrinterTest.hs  TypeCheckerTest.hs
test/LucretiaTest/InterpreterTest/: print.lu
test/LucretiaTest/TypeCheckerTest/: TypingExamples.hs
test/PythonToLucretiaTest/: print_01.py  records.py  records_01.py  translation_by_examples.lucr  variables_01.py
test/UtilTest/: DiffTest.hs  VariableNameTest.hs
