Name:		        lucretia
Synopsis:               A type-checker for an intermediate language Lucretia modelling scripting languages (e.g. Python).
Description:            A type-checker for an intermediate language Lucretia modelling scripting languages (e.g. Python).
Version:	        0.2
Author:		        Marcin Benke
       		        Michał Oniszczuk <michal.oniszczuk@gmail.com>
Homepage:               https://github.com/miconi/lucretia
Build-Type:	        Simple
Cabal-Version:          >=1.8

--executable lucre_interpreter
--  hs-source-dirs:       src
--  main-is:              lucre_interpreter.hs
--  build-depends:        base >= 4,
--                        data-lens-template,
--                        data-lens-fd,
--                        containers,
--                        mtl >= 1.1,
--                        parsec >=3

--executable lucre_typechecker
--  main-is:              lucre_typechecker.hs

--executable python_typechecker
--  main-is:              python_typechecker.hs

library
  hs-source-dirs:       src
  exposed-modules:
                        --Lucretia.Interpreter.Exception,
                        --Lucretia.Interpreter,
                        Lucretia.Language.Definitions,
                        Lucretia.Language.Syntax,
                        Lucretia.Language.Types,
                        --Lucretia.Parser.ApplicativeParser,
                        --Lucretia.Parser.ParsecParser,
                        --Lucretia.PrettyPrint,
                        Lucretia.TypeChecker,
                        Lucretia.TypeChecker.Monad,
                        Lucretia.TypeChecker.Renaming,
                        Lucretia.TypeChecker.Rules,
                        Lucretia.TypeChecker.Update,
                        Lucretia.TypeChecker.Weakening,
                        --PythonToLucretia,
                        Util.Debug,
                        Util.Diff,
                        Util.HUnit,
                        Util.MapLenses,
                        Util.Monad,
                        Util.OrFail,
                        Util.PrettyPrint,
                        Util.VariableName
  build-depends:        base >= 4.7,
                        containers,
                        data-lens-template,
                        data-lens-fd,
                        either-unwrap >= 1.1,
                        HUnit,
                        --language-python,
                        mtl >= 1.1,
                        parsec >=3,
                        pretty,
                        process,
                        template-haskell,
                        test-framework,
                        test-framework-quickcheck2,
                        test-framework-hunit,
                        pretty-show,
                        transformers

test-suite test
  hs-source-dirs:       test
  main-is:              test.hs
  type:                 exitcode-stdio-1.0
  build-depends:        base,
                        containers,
                        data-lens >= 2.10.0,
                        data-lens-template >= 2.1.5,
                        data-lens-fd >= 2.0.2,
                        hashable,
                        HUnit,
                        --language-python,
                        lucretia,
                        mtl >= 1.1,
                        QuickCheck,
                        test-framework,
                        test-framework-quickcheck2,
                        test-framework-hunit,
                        pretty-show,
                        pretty

