Name:		lucre
Version:	0.1
Author:		Marcin Benke
Build-Type:	Simple
Cabal-Version:  >=1.2

executable lucre
  build-depends: 
    base >= 4,
    containers,
    mtl >= 1.1,
    parsec >=3
  main-is: lucre.hs
  other-modules: Lucretia.ApplicativeParser, Lucretia.Definitions, 
    Lucretia.Syntax, Lucretia.Exception, Lucretia.Interpreter,
    Lucretia.Types

executable Test
  build-depends: 
    HUnit,
    process
  main-is: Test.hs
  other-modules: Lucretia.ApplicativeParser, Lucretia.Definitions, 
    Lucretia.Interpreter,
    Lucretia.Exception,
    Lucretia.Definitions,
    Lucretia.Syntax,
    Lucretia.Types, 
    Lucretia.TypeChecker.TypeChecker,
    Lucretia.TypeChecker.IsomorphicModuloNames,
    Lucretia.TypeChecker.Test,
    DebugUtils, Diff, HUnitUtils, LocalState, OrFail
