Name:		lucre
Version:	0.1
Author:		Marcin Benke
Build-Type:	Simple
Cabal-Version:  >=1.2

executable lucre
  build-depends: 
    base >= 4,
    containers,
    mtl >= 1.1,
    parsec >=3
  main-is: lucre.hs
  other-modules: Lucretia.ApplicativeParser, Lucretia.Definitions, 
    Lucretia.Syntax, Lucretia.Exception, Lucretia.Interpreter,
    Lucretia.Types

executable Test
  build-depends: 
    HUnit,
    process,
    either-unwrap >= 1.1,
    data-lens >= 2.10.0,
    data-lens-template >= 2.1.5,
    data-lens-fd >= 2.0.2,
    template-haskell
  main-is: Test.hs
  other-modules: Lucretia.ApplicativeParser, Lucretia.Definitions, 
    Lucretia.Interpreter,
    Lucretia.Exception,
    Lucretia.Definitions,
    Lucretia.Syntax,
    Lucretia.Types, 
    Lucretia.TypeChecker.TypeChecker,
    Lucretia.TypeChecker.MonomorphicModuloNames,
    Lucretia.TypeChecker.Test,
    DebugUtils, Diff, HUnitUtils, MonadUtils, OrFail, Utils.VariableName
